--- a/package.json
+++ b/package.json
@@ -14,11 +14,20 @@
   "license": "ISC",
   "keywords": [],
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/better-sqlite3": "^7.6.13",
+    "@types/cors": "^2.8.19",
+    "@types/csurf": "^1.11.5",
     "@types/express": "^5.0.3",
+    "@types/express-rate-limit": "^5.1.3",
+    "@types/helmet": "^0.0.48",
+    "@types/hpp": "^0.2.6",
+    "@types/joi": "^17.2.2",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.5.0",
+    "@types/validator": "^13.15.3",
+    "@types/winston": "^2.4.4",
     "nodemon": "^3.1.10",
     "npm-run-all": "^4.1.5",
     "rimraf": "^6.0.1",
@@ -26,13 +35,23 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "better-sqlite3": "^12.2.0",
+    "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
+    "express-validator": "^7.2.1",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
     "http-status-codes": "^2.3.0",
+    "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.18.1"
+    "mongoose": "^8.18.1",
+    "validator": "^13.15.15",
+    "winston": "^3.17.0"
   },
   "description": ""
 }
